<resources>
    <string name="app_name">Akademia Androida</string>
    <string name="label_first_tier_color">Kolor I rzędu</string>
    <string name="label_second_tier_color">Kolor II rzędu</string>
    <string name="label_third_tier_color">Kolor III rzędu</string>
    <string name="label_error_color">Kolor błędu</string>
    <string name="about_company_tab_layout">About</string>
    <string name="in_numbers_company_tab_layout">In numbers</string>
    <string name="in_numbers_founded">Founded</string>
    <string name="in_numbers_founded_year">2019</string>
    <string name="in_numbers_employes">Employes</string>
    <string name="in_numbers_employes_number">+60</string>
    <string name="in_numbers_deployments">Deployments</string>
    <string name="in_numbers_deployments_number">+20</string>
    <string name="in_numbers_min_project_size">Min. Project Size</string>
    <string name="in_numbers_min_project_size_amount">5000$</string>
    <string name="apply_now">Apply now</string>
    <string name="we_are_hiring">We\'re Hiring!</string>
    <string name="join_our_team">Join our team</string>
    <string name="do_you_want_to_install_app">Do you want to install the %s app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="footer_text_down">Copyright 2023 SafetyHeads</string>
    <string name="footer_text_up">SafetyHeads.com - Privacy policy and Cookie policy</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_url">https://safetyheads.com/android-academy</string>
    <string name="cookie_policy">Cookie policy</string>
    <string name="cookie_policy_url">https://safetyheads.com/contact-us</string>
    <string name="invalid_name_message">Incorrect name</string>
    <string name="invalid_surname_message">Incorrect surname</string>
    <string name="invalid_empty_message">This field is required</string>
    <string name="invalid_spaces_message">Too much spaces</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_phone_message">Invalid phone number</string>
    <string name="invalid_email">Invalid email</string>
    <string name="experience_structure_image">Experience Structure image</string>
    <string name="cd_arrow">Back Arrow</string>
    <string name="launch_screen_txt_sign_in">Sign in</string>
    <string name="launch_screen_txt_welcome">Welcome to SafetyHeads</string>
    <string name="launch_screen_txt_subtext">Create mobile and web apps for any screen</string>
    <string name="launch_screen_btn_get_started">Get started</string>
    <string name="launch_screen_txt_company_name">SafetyHeads</string>
    <string name="launch_screen_image_launch">launch screen image</string>
    <string name="contact_us_main_text">Contact us!\nWe’d love to hear from you</string>
    <string name="contact_us_email_text">contact@safetyheads.com</string>
    <string name="contact_us_phone_text"><u>+48 665 606 024</u></string>
    <string name="contact_us_company_text">SafetyHeads</string>
    <string name="contact_us_address_text">Plac Konstytucji 3 Maja\n50-048 Wrocław</string>
    <string name="contact_us_fill_form_button_text">Fill the contact form</string>
    <string name="contact_us_social_text">Check our Social Media</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile_apps_development">Mobile Apps Development</string>
    <string name="web_apps_development">Web Apps Development</string>
    <string name="low_code_development">Low-code Development</string>
    <string name="team_augmentation">Team Augmentation</string>
    <string name="project_team_leasing">Project Team Leasing</string>
    <string name="support_and_maintenance">Support and Maintenance</string>
    <string name="cybersecurity">CyberSecurity</string>
    <string name="it_audits">IT Audits</string>
    <string name="digital_transformation">Digital Transformation</string>
    <string name="ai_machine_learning_nlp">AI &amp; Machine Learning &amp; NLP</string>
    <string name="internet_of_things">Internet of Things</string>
    <string name="cloud_devops">Cloud &amp; DevOps</string>
    <string name="activities">activities</string>
    <string name="fragments">fragments</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_now">Sign in now</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="not_a_member">Not a member?</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="sign_in">Sign in</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password"> <u>Forgot password?</u> </string>
    <string name="dot_enumeration">•</string>
    <string name="video">Video</string>
    <string name="channel">Channel</string>
    <string name="add_video">ADD VIDEO</string>
    <string name="playlist">Playlist</string>
    <string name="job_offers">Job offers</string>
    <string name="we_are_waiting_for_you_check_out_our_open_positions_and_join_us">We are waiting for you! Check out our open positions and join us.</string>
    <string name="stay_up_to_date_with">Stay up to date with</string>
    <string name="our_job_offers">our job offers</string>
    <string name="see_the_offer">See the offer</string>
    <string name="forgot_password_without_underline">Forgot password?</string>
    <string name="forgot_password_text">Enter your e-mail address and we’ll send you a link to return to your account.</string>
    <string name="e_mail">E-mail</string>
    <string name="request_reset_link">Request reset link</string>
    <string name="or">Or</string>
    <string name="we_have_emailed_your_password_reset_link">We have e-mailed your password reset link.</string>
    <string name="failed_sent_forgot_password">Failed sent e-mail. Please try again later</string>
    <string name="home">Home</string>
    <string name="media">Media</string>
    <string name="career">Career</string>
    <string name="contact">Contact</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="arrow_notifications">Arrow notifications</string>
    <string name="technology_stack">Technology Stack</string>
    <string name="mobile_app">Mobile app</string>
    <string name="web_app">Web app</string>
    <string name="others">Others</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="show_my_current_location">Show my current location</string>
    <string name="hello_nickname">Hello %s</string>
    <string name="meet_us">Meet us</string>
    <string name="explore_our_social_media">Explore our social media for laughs, member features, furry friends, and passion-filled content.</string>
    <string name="profile_photo">Profile photo</string>
    <string name="change_photo">Change photo</string>
    <string name="choose_image">Choose image</string>
    <string name="make_photo">Make photo</string>
    <string name="remove_current_image">Remove current image</string>
    <string name="wyswietl_info">Wyświetl info</string>
    <string name="usun_scope">Usuń scope</string>
    <string name="utworz_scope">Utwórz scope</string>
    <string name="photo">Photo</string>
    <string name="movies">Movies</string>
    <string name="all_media">All media</string>
    <string name="our_creativity">our creativity</string>
    <string name="full_name_with_star">Full name*</string>
    <string name="e_mail_with_star">E-mail*</string>
    <string name="write_to_us">Write to us</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_your_message_here">Enter your message here</string>
    <string name="example_phone_number">+48 555 555 555</string>
    <string name="enter_your_message_please">Enter your message please</string>
    <string name="do_you_need_nda_first">Do you need NDA first?</string>
    <string name="i_hereby_consent">I hereby consent to the processing my data by SafetyHeads.</string>
    <string name="send_your_message">Send your message</string>
    <string name="message_with_star">Message*</string>
    <string name="for_more_information">For more information, see our privacy policy.</string>
    <string name="account_informations">Account informations</string>
    <string name="job_position">Job position</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Address</string>
    <string name="other_actions">Other actions</string>
    <string name="delete_account">Delete account</string>
    <string name="log_out_from_app">Log out from app</string>
    <string name="invalid_address_message">Wrong address provided</string>
    <string name="invalid_street_message">Wrong street name</string>
    <string name="invalid_house_number_message">Wrong house number</string>
    <string name="invalid_apartment_number_message">Wrong apartment number</string>
    <string name="invalid_zip_code">Wrong zip code</string>
    <string name="invalid_city">Wrong city name</string>
    <string name="invalid_street_name">Wrong street name</string>
    <string name="long_lorem_ipsum">Aliquam consequat magna erat, nec finibus neque condimentum vulputate. In eget purus ac augue mattis pharetra. Aliquam scelerisque, sapien vel fringilla finibus, mi sem condimentum odio, quis ultrices dolor purus eu lorem. Phasellus scelerisque nunc nunc, in hendrerit lorem lacinia eget. Ut ut dolor a nisl dignissim interdum ut in mauris. Aliquam consequat magna erat, nec finibus neque condimentum vulputate. In eget purus ac augue mattis pharetra. Aliquam scelerisque, sapien vel fringilla finibus, mi sem condimentum odio, quis ultrices dolor purus eu lorem. Phasellus scelerisque nunc nunc, in hendrerit lorem lacinia eget. Ut ut dolor a nisl dignissim interdum ut in mauris. Aliquam consequat magna erat, nec finibus neque condimentum vulputate. In eget purus ac augue mattis pharetra. Aliquam scelerisque, sapien vel fringilla finibus, mi sem condimentum odio, quis ultrices dolor purus eu lorem. Phasellus scelerisque nunc nunc, in hendrerit lorem lacinia eget. Ut ut dolor a nisl dignissim interdum ut in mauris. Aliquam consequat magna erat, nec finibus neque condimentum vulputate. In eget purus ac augue mattis pharetra. Aliquam scelerisque, sapien vel fringilla finibus, mi sem condimentum odio, quis ultrices dolor purus eu lorem. Phasellus scelerisque nunc nunc, in hendrerit lorem lacinia eget. Ut ut dolor a nisl dignissim interdum ut in mauris. Aliquam consequat magna erat, nec finibus neque condimentum vulputate. In eget purus ac augue mattis pharetra. Aliquam scelerisque, sapien vel fringilla finibus, mi sem condimentum odio, quis ultrices dolor purus eu lorem. Phasellus scelerisque nunc nunc, in hendrerit lorem lacinia eget. Ut ut dolor a nisl dignissim interdum ut in mauris.</string>
    <string name="lorem_ipsum_dolor_sit_amet">Lorem ipsum dolor sit amet</string>
    <string name="medium_lorem_ipsum">Aliquam consequat magna erat, nec finibus neque condimentum vulputate. In eget purus ac augue mattis pharetra. Aliquam scelerisque, sapien vel fringilla finibus, mi sem condimentum odio, quis ultrices dolor purus eu lorem. Phasellus scelerisque nunc nunc, in hendrerit lorem lacinia eget. Ut ut dolor a nisl dignissim interdum ut in mauris.</string>
    <string name="back_arrow_button">Back arrow button</string>
    <string name="benefits">Benefits</string>
    <string name="delegations">Delegations</string>
    <string name="ama">AMA</string>
</resources>