<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/services_development"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/size_3x" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_apps_development"
        android:layout_gravity="center"
        style="@style/Text"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web_apps_development"
        android:layout_gravity="center"
        android:layout_margin="@dimen/size_1.5x"
        style="@style/Text"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low_code_development"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/size_1.5x"
        style="@style/Text"/>

</LinearLayout>