<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.safetyheads.akademiaandroida.presentation.ui.fragments.forgotpasswordfragment.ForgotPasswordFragment">

    <com.safetyheads.akademiaandroida.presentation.ui.components.BackArrowView
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_3x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_back"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/logo_safetyheads"
            style="@style/Logo_safetyheads"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/size"
            android:src="@drawable/h2_view_line_63dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_forgot_pass_text"
            app:layout_constraintEnd_toStartOf="@+id/tv_forgot_pass_text"
            app:layout_constraintTop_toTopOf="@+id/tv_forgot_pass" />

        <TextView
            android:id="@+id/tv_forgot_pass"
            style="@style/Text_comforta_bold_18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="@dimen/size_4x"
            android:text="@string/forgot_password_without_underline"
            android:textColor="@color/s_60"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_safetyheads" />

        <TextView
            android:id="@+id/tv_forgot_pass_text"
            style="@style/Poppins_regular_green_10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="@dimen/size_0.25x"
            android:text="@string/forgot_password_text"
            android:textColor="@color/n_120"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pass" />

        <TextView
            android:id="@+id/email_address"
            style="@style/Text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_3x"
            android:text="@string/e_mail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pass_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_eText_email_address"
            style="@style/Layout_eText_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_0.25x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eText_email_address"
                style="@style/EText_email_address"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@null" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/request_button"
            style="@style/StyledButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/size_5x"
            android:backgroundTint="@color/p_30"
            android:text="@string/request_reset_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_eText_email_address" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_4x"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/request_button">

            <TextView
                style="@style/Text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/size_0.5x"
                android:text="@string/or"/>

            <TextView
                android:id="@+id/sign_in_now"
                style="@style/Poppins_regular_green_10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_0.5x"
                android:text="@string/sign_in_now" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>